examples/compileerror/errors.ts
var foo = 123;
foo = '123';
